<resources>
    <string name="app_name">AstronomyApp</string>

    <string name="apod_title">APOD (Astronomy Picture of the Day)</string>

    <string name="no_results">No results</string>
    <string name="app_name_splash">Astronomy\nApp</string>


    <!--         MAIN               -->
    <string name="apod">APOD</string>
    <string name="apod_sub">Astronomy Picture of the Day</string>
    <string name="planets">Solar System</string>
    <string name="planets_sub">All the planets</string>
    <string name="earth">Earth</string>
    <string name="earth_sub">Earth pictures</string>
    <string name="hubble">Hubble</string>
    <string name="hubble_sub">Pictures of the Space Telescope</string>
    <string name="iss">ISS</string>
    <string name="loading">Loading…</string>
    <string name="finish">Are you sure you want to close the app?</string>
    <string name="exit">CLOSE</string>
    <!--                           -->

    <!--         APOD              -->
    <string name="up">Up</string>
    <string name="copy"><![CDATA[Image Credit & Copyright:]]></string>
    <string name="failed_insert_row">Failed to insert row into: </string>
    <string name="date">Date:&#160;</string>
    <string name="copyright">Copyright:&#160;</string>
    <string name="image_pager_item_apod">Picture of APOD</string>


    <!--          MAPS            -->
    <string name="title_activity_maps">Map</string>
    <string name="latitude">Latitude:&#160;</string>
    <string name="longitude">Longitude:&#160;</string>
    <string name="altitude">Altitude:&#160;</string>
    <string name="velocity">Velocity:&#160;</string>
    <string name="time">Time:&#160;</string>
    <string name="visibility">Visibility:&#160;</string>
    <string name="no_data">No data</string>
    <string name="unkow_uri">Unknow URI:</string>
    <string name="solar_system">Solar System</string>
    <string name="extract">Extract</string>
    <string name="complete_text">Complete text</string>

    <!--           SOLAR SYSTEM             -->

    <string-array name="subtitle_array">
        <item>A G-type main-sequence star (G2V)</item>
        <item>The smallest and innermost planet</item>
        <item>The hottest planet in the Solar System</item>
        <item>Our home planet</item>
        <item>The Red Planet, dry and cool</item>
        <item>The largest planet, a gas giant</item>
        <item>Another gas giant with awesome rings</item>
        <item>An ice giant</item>
        <item>The farthest planet from the Sun</item>
        <item>A dwarf planet in the Kuiper belt</item>
        <item>The most geologically active object in the Solar System</item>
        <item>The largest moon of Jupiter</item>
        <item>Their size is almost that of Mercury</item>
        <item>It may have a huge water ocean beneath it</item>
        <item>The only moon with a dense atmosphere</item>
        <item>A moon with giant geysers</item>
    </string-array>

    <string name="hubble_news">Hubble Pictures</string>
    <string name="no_image">No picture</string>
    <string name="distance_to_earth">Distance to Earth:</string>
    <string name="distance_to_sun">Distance to Sun:</string>
    <string name="menu_button">Menu Button</string>
    <string name="logo">Logo</string>
    <string name="trans_photo_apod">Trans_Photo_Apod</string>
    <string name="favorites">Favorites</string>
    <string name="button_for_share_image">Button to share image</string>
    <string name="view_favorites">View favorites</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="data_saved">Favorite added</string>
    <string name="data_deleted">Favorite removed</string>
    <string name="data_yet_deleted">This item is already deleted</string>
    <string name="step_forward">Step Forward</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="picture_of_earth">Picture of Earth</string>
    <string name="flag_from_astronaut">Flag From Astronaut</string>
    <string name="logo_twitter">Twitter Logo</string>
    <string name="logo_wikipedia">Wikipedia Logo</string>
    <string name="astronauts_in_space">Astronauts in space</string>
    <string name="webcam_from_iss">ISS Webcam</string>
    <string name="problems_with_webcam">Webcam issues. Try again later.</string>
    <string name="astronaut_picture">Astronaut Picture</string>
    <string name="is_favorited">This item is already in Favorites</string>
    <string name="no_network">No network connection</string>
    <string name="no_api">Problem with api</string>
    <string name="retry">RETRY</string>

    <string name="image_widget">Widget Picture</string>
    <string name="number_of_days_30">Showing 30 days</string>
    <string name="number_of_days_40">Showing 40 days</string>
    <string name="number_of_days_60">Showing 60 days</string>
    <string name="picture_from_hubble">Hubble Picture</string>
    <string name="credits">Credit:&#160;</string>
    <string name="fix_iss">Lock/Unlock ISS picture</string>
    <string name="image_pager_item_hubble">Hubble Picture</string>
    <string name="image_pager_item_system">Solar System Picture</string>
    <string name="swipe_delete">Swipe to remove from Favorites</string>
    <string name="logo_kick">Logo Kick</string>
    <string name="show_days">Show days</string>

</resources>
