<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/fix_iss"
        android:title="@string/fix_iss"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_astronauts"
        android:title="@string/astronauts_in_space"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_cam"
        android:title="@string/webcam_from_iss"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/from_iss_to_apod"
        android:title="@string/apod"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/from_iss_to_earth"
        android:title="@string/earth"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/from_iss_to_solar"
        android:title="@string/solar_system"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/from_iss_to_hubble"
        android:title="@string/hubble"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>