<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/from_earth_to_apod"
        android:title="@string/apod"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/from_earth_to_solar"
        android:title="@string/solar_system"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/from_earth_to_iss"
        android:title="@string/iss"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/from_earth_to_hubble"
        android:title="@string/hubble"
        android:orderInCategory="100"
        app:showAsAction="never"/>


</menu>