<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_list_activity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:elevation="@dimen/elevation"
        app:contentScrim="@color/colorPrimary"
        android:theme="@style/AppTheme"
        tools:targetApi="lollipop">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_hubble"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_hubble"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/list_toolbar_side_margin"
                android:elevation="@dimen/elevation"
                android:background="@color/colorPrimaryLightTrans"
                android:layout_marginRight="@dimen/list_toolbar_side_margin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                tools:targetApi="lollipop">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title_hubble"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:text="@string/hubble_news"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/model_text_size_24"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.5"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/tv_swipe"
                        style="@style/TextViewModelSubTitle"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/swipe_delete"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title_hubble"
                        android:layout_marginRight="8dp" />

                    <ImageButton
                        android:id="@+id/ib_menu_activity_hubble"
                        style="@android:style/Widget.Holo.Light.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/model_margin_8"
                        android:contentDescription="@string/menu_button"
                        android:onClick="clickMenuHubble"
                        android:src="@drawable/ic_menu_black_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginRight="@dimen/model_margin_8" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_hubble"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <ProgressBar
        android:id="@+id/pb_hubble_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_nodata_favorites_hubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_favorites_yet"
        android:textStyle="bold"
        android:visibility="gone"
        android:textSize="@dimen/model_text_size_16"
        android:layout_gravity="center"/>

</android.support.design.widget.CoordinatorLayout>






