<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_widget"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/model_margin_8"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/widget_astronomyapp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/model_text_size_18"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="33dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/apod_sub"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/iv_widget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_widget"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/image_widget"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_widget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_title_widget"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="394dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_widget" />


    </android.support.constraint.ConstraintLayout>
</LinearLayout>