<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_list_activity">

     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
         android:elevation="@dimen/elevation"
         app:contentScrim="@color/colorPrimary"
         android:theme="@style/AppTheme"
         tools:targetApi="lollipop">

          <android.support.design.widget.CollapsingToolbarLayout
              android:id="@+id/collapsing_system"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              app:layout_scrollFlags="scroll|exitUntilCollapsed">

               <ImageView
                   android:id="@+id/iv_system"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:contentDescription="@string/app_name"
                   android:scaleType="centerCrop" />
               <android.support.v7.widget.Toolbar
                   android:id="@+id/toolbar"
                   android:layout_width="match_parent"
                   android:layout_height="?actionBarSize"
                   android:layout_gravity="bottom"
                   android:layout_marginLeft="@dimen/list_toolbar_side_margin"
                   android:elevation="@dimen/elevation"
                   android:background="@color/colorPrimaryLightTrans"
                   android:layout_marginRight="@dimen/list_toolbar_side_margin"
                   app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                   tools:targetApi="lollipop">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:text="@string/solar_system"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/model_text_size_24"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.5"
                        android:id="@+id/tv_title_hubble"
                        tools:ignore="RelativeOverlap" />

                         <ImageButton
                             android:id="@+id/ib_menu_activity_solar"
                             style="@android:style/Widget.Holo.Light.ImageButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentRight="true"
                             android:layout_alignParentTop="true"
                             android:layout_marginEnd="13dp"
                             android:layout_marginRight="13dp"
                             android:contentDescription="@string/menu_button"
                             android:onClick="clickMenuSolar"
                             android:src="@drawable/ic_menu_black_24dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />

                    </RelativeLayout>

               </android.support.v7.widget.Toolbar>
          </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>



     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_system"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>






